# OpenCode

./: CHANGELOG.md  README.md  pyproject.toml
.ai/: ARCHITECTURE.md  GUARDRAILS.md  MAP.md  START.md  TEST-002-IMPLEMENTATION.md  UNDONE.md
.ai/phase/agent-workflows/: COMPLETION_CRITERIA.md  DEPENDENCIES.md  GHERKIN.md  PLAN.md  REVIEW.md  TESTS.md
.ai/phase/cicd-setup/: COMPLETION_CRITERIA.md  DEPENDENCIES.md  GHERKIN.md  PLAN.md  REVIEW.md  TESTS.md
.ai/phase/code-cleanup/: COMPLETION_CRITERIA.md  DEPENDENCIES.md  GHERKIN.md  PLAN.md  REVIEW.md  TESTS.md
.ai/phase/documentation-fix/: COMPLETION_CRITERIA.md  DEPENDENCIES.md  GHERKIN.md  PLAN.md  REVIEW.md  TESTS.md
.ai/phase/llm-tool-integration/: COMPLETION_CRITERIA.md  DEPENDENCIES.md  GHERKIN.md  PLAN.md  REVIEW.md  TESTS.md
.ai/phase/per-project-rag/: COMPLETION_CRITERIA.md  DEPENDENCIES.md  GHERKIN.md  PLAN.md  REVIEW.md  TESTS.md
.ai/phase/specialized-agents/: COMPLETION_CRITERIA.md  DEPENDENCIES.md  GHERKIN.md  PLAN.md  REVIEW.md  TESTS.md
.ai/phase/test-coverage/: COMPLETION_CRITERIA.md  DEPENDENCIES.md  GHERKIN.md  PLAN.md  README.md  REVIEW.md  TESTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr-check.yml  test.yml
docs/development/: plugins.md
docs/research/: diagram-generation-best-practices.md
docs/user-guide/: workflows.md
examples/workflows/: README.md  api-development.yaml  ci-pipeline.yaml  code-review.yaml  data-migration.yaml  refactoring-workflow.yaml
src/code_forge/: __init__.py
src/code_forge/agents/: base.py  executor.py  manager.py  types.py
src/code_forge/cli/: __init__.py  context_adapter.py  conversation.py  dependencies.py  interrupt.py  main.py  repl.py  setup.py  status.py
src/code_forge/commands/: base.py  executor.py  parser.py
src/code_forge/config/: loader.py  models.py  sources.py
src/code_forge/context/: __init__.py  events.py  limits.py  manager.py  profiles.py  project_detector.py  resolver.py  strategies.py  tokens.py  tracker.py
src/code_forge/core/: __init__.py  constants.py  interfaces.py  logging.py  types.py
src/code_forge/git/: diff.py  history.py  status.py
src/code_forge/hooks/: executor.py  registry.py
src/code_forge/langchain/: agent.py  llm.py  memory.py  messages.py  prompts.py  tools.py
src/code_forge/llm/: client.py  models.py  routing.py  streaming.py
src/code_forge/mcp/: client.py  config.py  manager.py  tools.py
src/code_forge/modes/: prompts.py
src/code_forge/natural/: __init__.py  intent.py  middleware.py  planner.py  resolver.py
src/code_forge/permissions/: checker.py  config.py  models.py  prompt.py  rules.py
src/code_forge/plugins/: discovery.py  loader.py  manager.py
src/code_forge/rag/: __init__.py  chunking.py  commands.py  config.py  embeddings.py  indexer.py  integration.py  manager.py  models.py  retriever.py  vectorstore.py
src/code_forge/sessions/: __init__.py  index.py  manager.py  models.py  repository.py  storage.py
src/code_forge/skills/: __init__.py  base.py  parser.py  registry.py
src/code_forge/tools/: __init__.py  base.py
src/code_forge/undo/: __init__.py  bash_detector.py  manager.py  models.py
src/code_forge/web/: __init__.py  cache.py
src/code_forge/workflows/: __init__.py  commands.py  composer.py  conditions.py  executor.py  graph.py  matcher.py  models.py  parser.py  progress.py  registry.py  rollback.py  state.py  tool.py
src/opencode/modes/: __init__.py  base.py  headless.py  manager.py  plan.py  prompts.py  thinking.py
tests/: README.md  conftest.py
tests/agents/: test_all_agents.py  test_base.py  test_manager.py  test_types.py
tests/async/: __init__.py  test_session_repository.py  test_web_cache_concurrency.py  test_workflow_execution.py
tests/benchmarks/: __init__.py  test_performance.py
tests/commands/: test_builtin_commands.py  test_executor.py  test_registry.py
tests/e2e/: E2E_TEST_REPORT.md  E2E_TEST_REPORT_FINAL.md  FIXES_APPLIED.md  __init__.py  conftest.py  test_cli_basic.py  test_commands_e2e.py  test_mcp_integration.py  test_multi_agent_flows.py  test_sessions_e2e.py  test_setup_flows.py  test_smoke.py  test_smoke_old.py  test_tools_e2e.py  test_web_search_integration.py  test_workflows_e2e.py
tests/git/: test_operations.py  test_repository.py
tests/github/: test_auth.py  test_client.py  test_issues.py  test_pull_requests.py
tests/integration/: TEST_CONCURRENCY_README.md  test_agent_workflow.py  test_concurrency.py  test_error_recovery.py  test_filesystem_errors.py  test_network_errors.py  test_tool_execution.py  test_workflow_integration.py
tests/mcp/: test_client.py  test_config.py  test_coverage_boost.py  test_manager.py  test_protocol.py  test_tools.py  test_transport.py
tests/mcp/transport/: test_transports.py
tests/plugins/: test_base.py  test_config.py  test_manager.py  test_manifest.py
tests/skills/: test_base.py  test_builtin.py  test_commands.py  test_loader.py  test_parser.py  test_registry.py
tests/unit/cli/: test_context_adapter.py  test_conversation.py  test_dependencies.py  test_interrupt.py  test_main.py  test_repl.py  test_setup.py  test_status.py  test_themes.py
tests/unit/config/: test_loader.py  test_models.py  test_sources.py
tests/unit/context/: test_events.py  test_limits.py  test_manager.py  test_profiles.py  test_project_detector.py  test_resolver.py  test_tracker.py
tests/unit/core/: test_interfaces.py  test_logging.py  test_types.py
tests/unit/hooks/: test_executor.py
tests/unit/langchain/: test_agent.py  test_llm.py  test_memory.py  test_messages.py  test_tools.py
tests/unit/llm/: test_client.py  test_errors.py  (+2 more)
tests/web/: test_cache.py  test_fetch.py  test_tools.py
(+124 files in other folders)
