[project]
name = "code-forge"
version = "1.8.13"
description = "AI-powered CLI development assistant with OpenRouter API and LangChain"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
authors = [{ name = "Code-Forge Contributors" }]
maintainers = [{ name = "Code-Forge Team" }]
keywords = [
    "ai",
    "cli",
    "development",
    "assistant",
    "openrouter",
    "langchain",
    "code-assistant",
    "llm",
    "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5,<3.0",
    "rich>=13.7,<14.0",
    "textual>=0.47,<1.0",
    "prompt-toolkit>=3.0,<4.0",
    "httpx[http2]>=0.26,<1.0",
    "aiohttp>=3.9,<4.0",
    "langchain>=0.1,<1.0",
    "langchain-core>=0.1,<1.0",
    "pyyaml>=6.0,<7.0",
    "watchdog>=3.0,<5.0",
    "tiktoken>=0.5,<1.0",
    "aiofiles>=23.0,<25.0",
    "beautifulsoup4>=4.12,<5.0",
    "html2text>=2024.2,<2025.0",
    "duckduckgo-search>=4.0,<6.0",
    "chardet>=5.0,<6.0",
]

[project.urls]
Homepage = "https://github.com/corey-rosamond/Code-Forge"
Documentation = "https://github.com/corey-rosamond/Code-Forge#readme"
Repository = "https://github.com/corey-rosamond/Code-Forge.git"
Issues = "https://github.com/corey-rosamond/Code-Forge/issues"
Changelog = "https://github.com/corey-rosamond/Code-Forge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.1,<1.0",
]

[project.scripts]
forge = "code_forge.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0911",  # Too many return statements (main.py entry point)
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "TC003",    # Pydantic needs runtime imports for type hints
    "PLC0415",  # Import outside top-level (needed for optional deps and lazy loading)
    "SIM108",   # Ternary operator (sometimes clearer as if/else)
]

[tool.ruff.lint.per-file-ignores]
"src/code_forge/tools/file/*.py" = [
    "PTH",      # Pathlib rules - file tools intentionally use os.path for flexibility
]
"src/code_forge/langchain/*.py" = [
    "TC002",    # LangChain needs runtime imports for proper class inheritance
    "ARG002",   # Callback interfaces require unused args for compatibility
    "PLR0915",  # Agent methods are complex by nature
    "E501",     # Line length - prompts.py has intentionally long prompt text
]
"src/code_forge/commands/*.py" = [
    "RUF012",   # ClassVar annotations not needed - class attrs are intended design
    "ARG002",   # Command execute() methods have standardized signatures
    "SIM102",   # Nested ifs sometimes clearer for validation chains
]
"src/code_forge/commands/builtin/*.py" = [
    "RUF012",   # ClassVar annotations not needed - class attrs are intended design
    "ARG002",   # Command execute() methods have standardized signatures
    "SIM105",   # contextlib.suppress less clear than try/except/pass
    "PLW2901", # Loop variable reassignment intentional for truncation
]
"src/code_forge/mcp/*.py" = [
    "TC001",    # Type checking imports - these need runtime access
    "SIM105",   # contextlib.suppress less clear than try/except/pass for async
    "RUF022",   # __all__ sorting - grouped by category for readability
    "PTH123",   # Path.open() - yaml.safe_load works fine with open()
    "RUF006",   # Task reference storage - cleanup handled by disconnect
]

[tool.ruff.lint.isort]
known-first-party = ["code_forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/code_forge"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90
